--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBvLuKuHZr5oLgVWyxddcP_Vjxz4ZWWYig"/>
+            android:value="API KEY"/>
 
         <activity
             android:name=".MainActivity"
