--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
     defaultConfig {
-        applicationId 'com.example.sukhai.part_it'
+        applicationId 'com.csc413.group9.parkIt'
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
