--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="GOOGLE API KEY"/>
+            android:value="AIzaSyCFzZL7B5DP4pQMEtr1-5MSPdKmfN0RKv0"/>
 
         <activity
             android:name="com.csc413.group9.parkIt.MainActivity"
