--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDC9lmh7OYfHLDGBSH5bBxZ-9OgTN7Z1hs"/>
+            android:value="GOOGLE MAP API KEY"/>
 
         <activity
             android:name="com.csc413.group9.parkIt.MainActivity"
