--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="Google Map API Key"/>
+            android:value="AIzaSyAWmkhxzlMzF9IFJpCh-bDs_fKh3YATSgA"/>
 
         <activity
             android:name="com.csc413.group9.parkIt.MainActivity"
