--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAWmkhxzlMzF9IFJpCh-bDs_fKh3YATSgA" />
+            android:value="Google_API_KEY" />
 
         <activity
             android:name=".MainActivity"
